Attribution to the icon creator

--- a/quick-app/src/i18n/de.json
+++ b/quick-app/src/i18n/de.json
@@ -61,7 +61,8 @@
             },
             "acknowledments": "Danke an:",
             "acks": [
-                "Maps by © OpenStreetMap"
+                "Maps by © OpenStreetMap",
+                "Icon from Digital Comic Museum (CC0)"
             ],
             "release": "Inhaltsfreigabe:",
             "involved": "Beteiligen Sie sich jetzt!",
