--- a/quick-app/src/i18n/es.json
+++ b/quick-app/src/i18n/es.json
@@ -61,7 +61,8 @@
             },
             "acknowledments": "Gracias a:",
             "acks": [
-                "Mapas por © OpenStreetMap"
+                "Mapas por © OpenStreetMap",
+                "Icono de Digital Comic Museum (CC0)"
             ],
             "release": "Versión del contenido:",
             "involved": "Colabora con el proyecto!",
