--- a/quick-app/src/i18n/en.json
+++ b/quick-app/src/i18n/en.json
@@ -61,7 +61,8 @@
             },
             "acknowledments": "Thanks to:",
             "acks": [
-                "Maps by © OpenStreetMap"
+                "Maps by © OpenStreetMap",
+                "Icon from Digital Comic Museum (CC0)"
             ],
             "release": "Content Release:",
             "involved": "Get involved now!",
